Fixed layout bug in IE

--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -1,4 +1,4 @@
-#sidebar > div {
+#sidebar > div > div {
     background:$gray-lighter;
     padding:0 15px;
     .storage {
