--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -68,14 +68,21 @@ body {
         > div {
             width:100%;
             height:100%;
-            overflow-x:hidden;
-            overflow-y: auto;
             position: relative;
+            > div {
+                overflow-x:hidden;
+                overflow-y: auto;
+                position: absolute;
+                top:0;
+                left:0;
+                right:0;
+                bottom:0;
+            }
         }
         &#sidebar {
             width: 250px;
         }
-        &#stage > div {
+        &#stage > div > div {
             padding: 0 15px 0 12px;
         }
         &.handle {
